--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roy-pages",
-  "version": "0.1.0",
+  "version": "0.6.0",
   "description": "Awesome node module",
   "keywords": [
     "roy-pages",
@@ -43,7 +43,8 @@
     "gulp-sass": "^4.1.0",
     "gulp-swig": "^0.9.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-useref": "^3.1.6"},
+    "gulp-useref": "^3.1.6"
+  },
   "devDependencies": {
     "standard": "^14.3.4"
   },
